[package]      
name    = "arc-script-core"
version = "0.0.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
build   = "build.rs"
license = "MIT"

[lib]
name    = "arc_script_core"
path    = "src/lib.rs"

[features]
default = []

[dependencies]
arc-script-core-shared = { version = "=0.0.0", path = "src/shared/" }
arc-script-core-macros = { version = "=0.0.0", path = "src/macros" }

logos              = { version = "0.11.4" }
regex              = { version = "1.4.3" }
lalrpop-util       = { version = "0.19.4" }
ena                = { version = "0.14.0"}
codespan-reporting = { git = "https://github.com/brendanzab/codespan" }
# num-traits         = { version = "0.2.14" }
# arrayvec           = { version = "0.5.2" }
# smartstring        = { version = "0.2.6" }
time               = { version = "0.2.26" }
lasso              = { version = "0.4.1" }
serde              = { version = "1.0.123", features = ["derive"] }
tracing            = { version = "0.2.0", git = "https://github.com/tokio-rs/tracing/" }
lexical-core       = { version = "0.7.5", features = ["format"] }
crepe              = { version = "0.1.5" }
petgraph           = { version = "0.5.1", package = "petgraph" }
ryu                = { version = "1.0.5" }
syn                = { version = "1.0.60", features = ["full"] }
quote              = { version = "1.0.8" }
proc-macro2        = { version = "1.0.24" }
# strum              = { version = "0.20.0", features = ["derive"] }
# better-panic       = { version = "0.2.0" }
text-size          = { version = "1.1.0" }
half               = { version = "1.7.1", features = ["num-traits"] }
sqlparser          = { version = "0.8.0" }
unzip-n            = { version = "0.1.2" }
# rustfmt-nightly    = { git = "https://github.com/rust-lang/rustfmt" }
# z3                 = { optional = true, version = "0.9.0" }
# toml               = { optional = true, version = "0.5.8" }
            
[dev-dependencies]           
indoc              = { version = "1.0.3" }
arbitrary          = { version = "0.4.7" }
           
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile           = { version = "3.1.0" }
salsa              = { version = "0.16.0" }
           
#[build]         
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]
        
#[target.x86_64-unknown-linux-gnu]    
#linker = "lld"     
     
[build-dependencies]     
lalrpop            = { version = "0.19.4", features = [ "lexer" ] }
