[package]
name = "arc-script-lsp"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[lib]
name = "arc_script_lsp"
path = "src/lib.rs"

[dependencies]
arc-script-core    = { path = "../arc-script-core" }

tower-lsp          = { version = "=0.13.3" }
# lspower            = { version = "0.6.0" }
tokio              = { version = "=0.2", features = ["io-std", "io-util", "macros", "net", "test-util"] }
codespan-lsp       = { version = "=0.10.1" }
codespan-reporting = { version = "=0.9.5" }
trie-rs            = { version = "0.1.1" }
lazy_static        = { version = "1.4.0" }
async-trait        = { version = "0.1.42" }
serde_json         = { version = "1.0.61" }
