[package]
name    = "arc-script-lsp"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[lib]
name = "arc_script_lsp"
path = "src/lib.rs"

[features]
default            = [ "runtime-tokio" ]
runtime-futures    = [ "lspower/runtime-agnostic", "futures", "blocking" ]
runtime-smol       = [ "lspower/runtime-agnostic", "smol" ]
runtime-tokio      = [ "lspower/runtime-tokio", "tokio" ]

[dependencies]
arc-script-core    = { path = "../arc-script-core" }

log                = { version = "0.4.13" }
lspower            = { version = "0.6.0", default-features = false }
codespan-lsp       = { git = "https://github.com/brendanzab/codespan" }
codespan-reporting = { git = "https://github.com/brendanzab/codespan" }
trie-rs            = { version = "0.1.1" }
lazy_static        = { version = "1.4.0" }
async-trait        = { version = "0.1.42" }
serde_json         = { version = "1.0.61" }
anyhow             = { version = "1.0.37" }
derive_more        = { version = "0.99.11", features = ["constructor"] }

# Runtimes
blocking           = { optional = true, version = "1.0" }
tokio              = { optional = true, version = "1.0", features = ["io-std", "macros", "rt", "rt-multi-thread", "sync"] }
smol               = { optional = true, version = "1.2" }
futures            = { optional = true, version = "1.11", package = "futures-lite" }
