[package]
name = "arc-script-quote"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn             = { version = "1.0.41", features = ["full"] }
quote           = "1.0.7"
proc-macro2     = "1.0.21"
arc-script-core = { path = "../arc-script-core" }
