[package]
name = "arc-script-web"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
arc-script-core          = { path = "../arc-script-core", default-features = false }

xterm-js-rs              = { version = "0.1.0", features = ["xterm-addon-fit"] }
js-sys                   = { version = "0.3.39" }
wasm-bindgen             = { version = "0.2.67" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc                = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.39"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'EventTarget',
  'MessageEvent',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
