[package]      
name           = "arc-script"
version        = "0.1.0"
authors        = ["Klas Segeljakt <klasseg@kth.se>"]
description    = "The Arc-Script compiler."
homepage       = "https://cda-group.github.io/"
repository     = "https://www.github.com/segeljakt/arc-script"
documentation  = "https://segeljakt.github.io/arc-script/"
readme         = "README.md"
keywords       = ["compiler", "data-science"]
categories     = ["science", "database"]
license        = "MIT"
# license-file   = "" TODO
edition        = "2018"
build          = "build.rs"
publish        = false
default-run    = "arc-script"

[lib]
name           = "arc_script"
path           = "src/lib.rs"

[[bin]]
name           = "arc-script"
path           = "src/main.rs"

[[bench]]
name           = "bench"
harness        = false

[features]
default     = []
all         = ["provider", "manifest", "incremental", "lsp", "repl"]
shaper      = ["z3"]
repl        = ["linefeed"]
provider    = ["reqwest", "http", "http-serde", "tempfile", "quick-protobuf", "pb-rs", "avro-rs", "glob"]
manifest    = ["toml", "tempfile", "http", "http-serde"]
incremental = ["salsa"]
lsp         = ["tower-lsp", "tokio", "codespan-lsp", "trie-rs", "lazy_static", "async-trait"]

[dependencies]
spanned-derive     = { version = "0.1.0", path = "../macros/spanned-derive" }
logos              = "0.11.4"
regex              = "1.4.1"
lalrpop-util       = "0.19.1"
ena                = "0.14.0"
codespan           = "0.9.5"
codespan-reporting = "0.9.5"
derive_more        = { version = "0.99.11", default-features = false, features = ["constructor"] }
num-traits         = "0.2.12"
arrayvec           = "0.5.1"
smartstring        = "0.2.5"
educe              = { version = "0.4.13", default-features = false, features = ["Hash", "PartialEq", "PartialOrd"] }
chrono             = "0.4.19"
lasso              = "0.3.1"
anyhow             = "1.0.33"
clap               = { git = "https://github.com/clap-rs/clap/", features = ["derive"]}
serde              = "1.0.117"
serde_derive       = "1.0.117"
serde_json         = "1.0.59"
flat_map           = "0.0.10"
indoc              = "1.0.3"

# -- Feature: shaper
z3                 = { optional = true, version = "0.6.0" }

# -- Feature: repl
linefeed           = { optional = true, version = "0.6.0" }

# -- Feature: provider
reqwest            = { optional = true, version = "0.10.8", features = ["blocking"] }
http               = { optional = true, version = "0.2.1" }
http-serde         = { optional = true, version = "1.0.1" }
quick-protobuf     = { optional = true, version = "0.8.0" }
pb-rs              = { optional = true, version = "0.9.1" }
avro-rs            = { optional = true, version = "0.11.0" }
glob               = { optional = true, version = "0.3.0" }
zip                = { optional = true, version = "0.5.8" }

# -- Feature: manifest
toml               = { optional = true, version = "0.5.7" }
tempfile           = { optional = true, version = "3.1.0" }

# -- Feature: incremental
salsa              = { optional = true, version = "0.16.0" }

# -- Feature: lsp
tower-lsp          = { optional = true, version = "0.13.3" }
tokio              = { optional = true, version = "0.2.22", features = ["rt-core", "macros", "io-std"] }
codespan-lsp       = { optional = true, version = "0.10.1" }
trie-rs            = { optional = true, version = "0.1.1" }
lazy_static        = { optional = true, version = "1.4.0" }
async-trait        = { optional = true, version = "0.1.41" }
petgraph           = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen       = "0.2.68"

[build-dependencies]
lalrpop            = { version = "0.19.1", features = [ "lexer" ] }

[dev-dependencies]
criterion          = "0.3.3"
criterion-cpu-time = "0.1.0"
include_dir        = "0.6.0"
proptest           = "0.10.1"
honggfuzz          = "0.5.51"
goldentests        = "0.3.7"
