[package]
name = "fuzz"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[[bin]]
name = "parse"
path = "fuzz-targets/parse.rs"

[dependencies]
arc-script-core = { path = "../arc-script-core" }
libfuzzer-sys   = { version = "0.3.5" }
