[package]
name = "fuzz"
version = "0.0.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "parse"
path = "fuzz-targets/parse.rs"

[dependencies]
arc-script-core = { version = "=0.0.0", path = "../arc-script-core" }
libfuzzer-sys   = { version = "0.3.5" }
