[package]
name = "arc-script-wasm"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.67"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
arc-script = { path = "../core", version = "0.1.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
