[package]
name = "client"
version = "0.0.0"
edition = "2021"

[features]
build-arc-lang = []
default = ["build-arc-lang"]

[dependencies]
shared             = { path = "../shared" }
axum               = { version = "0.6.3" }
clap               = { version = "4.1.3", features = ["derive"] }
futures            = { version = "0.3.25" }
serde              = { version = "1.0.152", features = ["derive"] }
tokio              = { version = "1.24.2", features = ["full"] }
tokio-futures      = { version = "0.0.0" }
tokio-serde        = { version = "0.8.0", features = ["json"] }
tokio-stream       = { version = "0.1.11" }
tokio-util         = { version = "0.7.4", features = ["full"] }
tracing            = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
reqwest            = { version = "0.11.14", features = ["json"] }
serde_json         = { version = "1.0.91" }
which              = { version = "4.4.0" }

[build-dependencies]
which = "4.4.0"
