[package]
name = "coordinator"
version = "0.0.0"
edition = "2021"

[dependencies]
shared         = { path = "../shared" }
axum           = { version = "0.6.3" }
clap           = { version = "4.1.3", features = ["derive"] }
futures        = { version = "0.3.25" }
serde          = { version = "1.0.152", features = ["derive"] }
tokio          = { version = "1.24.2", features = ["full"] }
tokio-futures  = { version = "0.0.0" }
tokio-serde    = { version = "0.8.0", features = ["json"] }
tokio-stream   = { version = "0.1.11" }
tokio-util     = { version = "0.7.4", features = ["full"] }
raw-cpuid      = { version = "10.6.0", features = ["serde"] }
crepe          = { version = "0.1.7" }
itertools      = { version = "0.10.5" }
quote          = { version = "1.0.23" }
proc-macro2    = { version = "1.0.50" }
halfbrown      = { version = "0.1.18", features = ["serde"] }
rust-format    = { version = "0.3.4", features = ["token_stream"] }
indoc          = { version = "1.0.8" }
which          = { version = "4.4.0" }
serde_json     = { version = "1.0.91", features = ["preserve_order"] }
regex          = { version = "1.7.1" }
rustls         = { version = "0.20.8" }
tokio-rustls   = { version = "0.23.4" }
rustls-pemfile = { version = "1.0.2" }
tracing        = { version = "0.1.37" }

[build-dependencies]
which = "4.4.0"
