[package]
name = "dataflow"
version = "0.0.0"
edition = "2021"

[lib]
name = "dataflow"
path = "src/lib.rs"

[features]
ml = ["tensorflow", "image"]
tikv = ["tikv-client"]
thread-pinning = ["hwloc", "libc"]

[dependencies]
macros             = { path = "./macros" }
futures            = { version = "0.3.25" }
num_cpus           = { version = "1.15.0" }
serde              = { version = "1.0.152", features = ["derive", "rc"] }
serde_json         = { version = "1.0.91" }
tokio              = { version = "1.24.2", features = ["full", "tracing"] }
tokio-serde        = { version = "0.8.0", features  = ["json"] }
tokio-util         = { version = "0.7.4", features  = ["full"] }
derive_more        = { version = "0.99.17", default-features = false, features = ["from", "into", "deref", "deref_mut", "constructor", "as_ref"] }
serde_derive       = { version = "1.0.152" }
tokio-stream       = { version = "0.1.11" }
time               = { version = "0.3.17", features = ["serde"] }
rdkafka            = { version = "0.29.0" }
num                = { version = "0.4.0" }
num-traits         = { version = "0.2.15" }
arrayvec           = { version = "0.7.2" }
cfg-if             = { version = "1.0.0" }
hexf               = { version = "0.2.1" }

hwloc              = { version = "0.5.0", optional = true }
libc               = { version = "0.2.139" , optional = true }

tikv-client        = { version = "0.1.0", optional = true }
sled               = { version = "0.34.7" }

tensorflow         = { version = "0.19.1", features = ["eager"], optional = true }
image              = { version = "0.24.5", optional = true }
csv                = { version = "1.1.6" }
tokio-rustls       = { version = "0.23.4" }
